# carla_lidar_mapping

./: CMakeLists.txt  README.md  package.xml
config/: objects.json
include/: lidar_mapping.h
launch/: carla_ros_bridge_with_example_ego_vehicle.launch  lidar_mapping.launch
rviz/: mapping.rviz
src/: lidar_mapping.cpp  lidar_mapping_node.cpp
