<?xml version="1.0"?>
<package format="2">
  <name>lidar_mapping</name>
  <version>1.0.0</version>
  <description>The lidar_mapping package</description>
  <maintainer email="robotpengxu@gmail.com">Casper-Auto</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
</package>
